# hfprop

./: .gitignore  AGENTS.md  LICENSE  README.md  llms.txt  pyproject.toml
src/hfprop/: __main__.py  cache.py  cli.py  config.py  display.py  fetch.py  geo.py  history.py  models.py  reticulum.py
src/hfprop/commands/: bands.py  history.py  now.py  path.py  query.py  serve.py  solar.py  watch.py
src/hfprop/sources/: base.py  hamqsl.py  swpc.py
tests/: conftest.py  test_cache.py  test_cli.py  test_display.py  test_geo.py  test_hamqsl.py  test_history.py  test_models.py  test_path.py  test_reticulum.py  test_swpc.py  test_watch.py
tests/fixtures/: hamqsl_sample.xml  swpc_flux.json  swpc_kindex.json
