[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hfprop"
version = "0.1.0"
description = "HF propagation conditions for field operators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ham-radio", "hf", "propagation", "reticulum", "freedv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
]

[project.scripts]
hfprop = "hfprop.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
reticulum = ["rns>=0.7.0", "lxmf>=0.9.0"]

[tool.setuptools.packages.find]
where = ["src"]
